@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/abcrypt-v0.3.5\...HEAD[Unreleased]
+
+=== Changed
+
+* Change `Encryptor::encrypt` to return `Result` ({pull-request-url}/516[#516])
+
 == {compare-url}/abcrypt-v0.3.4\...abcrypt-v0.3.5[0.3.5] - 2024-07-03
 
 === Changed
